# Thunderbringer

./: .gitignore  .npmignore  CLAUDE.md  CMakeLists.txt  README.md  binding.gyp  index.js  package-lock.json  package.json
lib/: errors.js  index.js  repository.js
scripts/: fetch-libgit2.js  install.js
src/: addon.cc  addon.h  blame.cc  blame.h  branch.cc  branch.h  checkout.cc  checkout.h  commit.cc  commit.h  config.cc  config.h  credential.h  diff.cc  diff.h  index.cc  index.h  merge.cc  merge.h  patch.cc  patch.h  reference.cc  reference.h  remote.cc  remote.h  repository.cc  repository.h  revwalk.cc  revwalk.h  signature.cc  signature.h  stash.cc  stash.h  status.cc  status.h  tag.cc  tag.h
src/common/: async_worker.h  error.h  guard.h  util.h
test/: branch.test.js  diff.test.js  index-commit.test.js  module.test.js  repository.test.js  status.test.js
test/fixtures/: setup.js
types/: index.d.ts
